# hwserver

./: .gitmodules  CMakeLists.txt  README.md  config.json  log.txt  simulator.cfg
libs/sasapi/: CMakeLists.txt  accounting.cpp  accounting.h  aft.cpp  aft.h  contadores.cpp  contadores.h  engconfig.cpp  engconfig.h  engineapi.h  enginecom.cpp  enginecom.h  enginedefs.h  file_log.c  file_log.h  machine.cpp  machine.h  sasapi.h  serial.cpp  serial.h  tito.cpp  tito.h  utils.cpp  utils.h
libs/uart_test/Core/Src/: enginesvrdefs.h  gendefs.h  sasstructs.h
sasapibk/: CMakeLists.txt  contadores.cpp  engconfig.h  engineapi.h  file_log.c  utils.cpp
sasapibk/uart_test/Core/Src/: gendefs.h  sasstructs.h
src/: App.cpp  AppComponent.hpp
src/abstractions/: ISASCommand.hpp  ISASCommandExecutionService.hpp  ISASCommandFactoryService.hpp
src/controller/: AsyncController.cpp  AsyncController.hpp  CommandController.cpp  CommandController.hpp  ConfigurationController.hpp  MyController.hpp
src/dto/: CommandDTO.hpp  CommandExecutionDTO.hpp  CommandsDTO.hpp  ConfigurationDTO.hpp  CountersDTO.hpp
src/dto/requests/: CommandExecutionRequest.hpp  Request.hpp
src/dto/responses/: Response.hpp
src/model/: Connect.cpp  Connect.hpp  Disconnect.cpp  Disconnect.hpp  HelloWorld.cpp  HelloWorld.hpp  SASOperation.cpp  SASOperation.hpp
src/model/commands/: AFTCashoutCommand.cpp  AFTLockCommand.cpp  AFTTransactionEndCommand.cpp  AFTTransactionStartCommand.cpp  BillInCommand.cpp  ConfigCommand.cpp  CountersCommand.cpp  DateTimeCommand.cpp  EnableCommand.cpp  ExceptionCommand.cpp  GameEndCommand.cpp  GameSelectedCommand.cpp  GameStartCommand.cpp  InitCommand.cpp  NewsCommand.cpp  ReelNStoppedCommand.cpp  SASPacketsDebugCommand.cpp  TicketInCommand.cpp  TicketInResultCommand.cpp  TicketInStatusCommand.cpp  TicketOutIdValidationCommand.cpp  TicketOutValidationRecordCommand.cpp
src/model/commands/headers/: AFTCashoutCommand.hpp  AFTLockCommand.hpp  AFTTransactionEndCommand.hpp  AFTTransactionStartCommand.hpp  BillInCommand.hpp  ConfigCommand.hpp  CountersCommand.hpp  DateTimeCommand.hpp  EnableCommand.hpp  ExceptionCommand.hpp  GameEndCommand.hpp  GameSelectedCommand.hpp  GameStartCommand.hpp  InitCommand.hpp  NewsCommand.hpp  ReelNStoppedCommand.hpp  SASPacketsDebugCommand.hpp  TicketInCommand.hpp  TicketInResultCommand.hpp  TicketInStatusCommand.hpp  TicketOutIdValidationCommand.hpp  TicketOutValidationRecordCommand.hpp
src/resources/: config.json
src/services/: LoggingService.cpp  LoggingService.hpp  SASCommandFactoryService.cpp  SASCommandFactoryService.hpp  SASCommunicationService.cpp  SASCommunicationService.hpp  SASEngineManagerService.cpp  SASEngineManagerService.hpp  ServerConfigurationService.cpp  ServerConfigurationService.hpp
src/utils/: Constants.hpp  SafeQueue.cpp  SafeQueue.hpp
src/utils/threads/: SASCycledThread.cpp  SASCycledThread.hpp  SASEngineGameTestThread.cpp  SASEngineGameTestThread.hpp  SASEnginePollThread.cpp  SASEnginePollThread.hpp
test/: MyControllerTest.cpp  MyControllerTest.hpp
test/app/: MyApiTestClient.hpp  TestComponent.hpp
